--- a/Notes de cours/Vocabulaire.yml
+++ b/Notes de cours/Vocabulaire.yml
@@ -1,4 +1,5 @@
-﻿Master: Branche principale sur lequel la version Prod se trouve
+﻿Repository : Endroit ou l'on stoque les metadata a propos des fichiers
+Master: Branche principale sur lequel la version Prod se trouve
 Stage : Prepare un fichier pour un changement
 Push : Envoye les doccuments vers un serveur distant
 Commit : Change la version courante des documents
@@ -26,17 +27,4 @@ Blame : Permet de voir qui a modifié chaque partie du Code
 Log : Voir l'historique des commits
 Reset : Change la version actuelle pour une version précédente
 
-SCM : 
-    Software Configuration Management
-    Software Change Management
-    Source Code Management
-    VCS: Version Control Tool
-        SVN : Subversion
-            Versioning functionality.
-            Subversion is centralized. 
-            It aims to solve the same sorts of problems, 
-            Forcing all activity to go through one location that everyone uses.
-        Easier but less flexible
-        CVS :
-Repository:
-            
+Vous allez possiblement rencontrer les acronymes SCM, VCS, SVN et CVS. Vous n'avez pas a apprendre ce que ca veux dire, sachez juste que c'est des catégories de logiciel qui rassemble git et ses ancetres.
