ajout d'information supplémentaire dans les notes <Cmd Base> , <Cmd Intermédiaire> et <Cmd Gui>

--- a/Notes de cours/Cmd Gui.yml
+++ b/Notes de cours/Cmd Gui.yml
@@ -2,8 +2,8 @@ Commandes avancées :
 Git-Gui ou Gitk : 
     montre l'interface graphique de base de Git
 TortoiseGit : 
-    
+    déjà vu en classe
 GitKraken :
-    
+    pour Windows, Mac et Linux
 Ungit :
-    
+    doit avoir Node.js,solution alternative aux allergiques de la console.
