--- a/Notes de cours/Cmd Base.yml
+++ b/Notes de cours/Cmd Base.yml
@@ -1,13 +1,17 @@
 Commandes avancées : 
 Status : 
-    montre les fichiers qui ont changé sur le disque
+    montre le nom des fichiers qui ont changé dans le projet
 Add : 
     pour ajouté les fichier a la liste de ceux devant faire l'objet d'un commit
+    faire git add <nom fichier1> <nom fichier2> <nom fichierN> OU git add * (pour tout les fichiers)
 Commit : 
     pour indiquer lors du commit quels fichiers précis doivent être « commités »
+    -git commit -a  pour « commiter » tous les fichiers qui étaient listés dans
+    git status  dans les colonnes « Changes to be committed » et « Changed but not updated » (qu’ils soient en vert ou en rouge)
+    ou git commit <nomfichier1> <nomfichier2>  pour indiquer lors du commit quels fichiers précis doivent être « commités »
 Push:
-    envoie au serveur le commit
+    envoie au serveur hébergeant le projet le résultat du commit
 Pull:
     combinaison de fetch et merge
 Fetch:
-    download la liste des changement depuis la derniere fois
+    download la liste des changement depuis la derniere fois,fait un "update" en local
