--- a/Notes de cours/Bonnes pratiques.yml
+++ b/Notes de cours/Bonnes pratiques.yml
@@ -42,7 +42,10 @@ Si vous revenez de vacances, prenez le temps de réviser les transactions par le
 Testez votre code avant de faire un Commit:
 Testez pour vous assurez que c'est bien complété et qu'il n'y a pas d'effet secondaire avec le reste du code. C'est particulièrement important pour le code non local.
 
+Branches courtes:
+Plus une branche est séparé longtemps de la branche principale, plus il sera difficile de la merger avec la branche principale. Les branches courtes rendent le processus beaucoup plus facile et propre.
 
+C'est important de prévenir les problèmes. Il est possible de configurer votre workflow pour que ca lance les test d'unités avant de merger et de prévenir les modification qui brisent le code. Et il est aussi important de pouvoir réparer les problèmes facilement.
 
 Ayez un back-up:
 Le Controle de Version n'est pas un back-up, c'est votre version principale.
@@ -94,4 +97,5 @@ https://github.com/git/git/blob/master/contrib/completion/git-completion.bash
 
 
 Alias Git:
-Vous pouvez créer des alias pour vos commandes afin de diminuer le temps a tapper les commandes au clavier. Par exemple; pour utiliser "git st" au lieu de "git status", vous devez configurer l'alias avec la commande "git config --global alias.st status". Vous pouvez aussi faire un alias avec la commande qui est tres courante mais longue : "git log --graph --oneline"
+Vous pouvez créer des alias pour vos commandes afin de diminuer le temps a tapper les commandes au clavier. Par exemple; pour utiliser "git st" au lieu de "git status", vous devez configurer l'alias avec la commande "git config --global alias.st status". Vous pouvez aussi faire un alias avec la commande qui est tres courante mais longue : 
+git config --global alias.graph "log --graph --oneline --decorate=short"
